moved server stuff to its own class improved exception throw created general connection function for cleaner api requests improved documentation